<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="box_six">Box Six</string>
    <string name="box_seven">Box Seven</string>
    <string name="box_eight">Box Eight</string>
    <string name="box_nine">Box Nine</string>
    <string name="box_ten">Box Ten</string>
    <string name="box_eleven">Box Eleven</string>
    <string name="box_twelve">Box Twelve</string>
    <string name="box_thirteen">Box Thirteen</string>
    <string name="box_fourteen">Box Fourteen</string>
    <string name="box_fifteen">Box Fifteen</string>
</resources>